@@ -28,15 +28,15 @@ import net.minecraft.world.item.ItemStack;
 import com.mojang.blaze3d.platform.Lighting;
 import com.mojang.blaze3d.systems.RenderSystem;
 import com.mojang.datafixers.util.Either;
+import net.neoforged.api.distmarker.Dist;
+import net.neoforged.api.distmarker.OnlyIn;
+import net.neoforged.neoforge.client.event.RenderTooltipEvent;
+import net.neoforged.neoforge.common.NeoForge;
 
 import lombok.Getter;
 import lombok.Setter;
 import lombok.experimental.Accessors;
 import lombok.experimental.Tolerate;
-import net.neoforged.api.distmarker.Dist;
-import net.neoforged.api.distmarker.OnlyIn;
-import net.neoforged.neoforge.client.event.RenderTooltipEvent;
-import net.neoforged.neoforge.common.NeoForge;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.List;
@@ -73,40 +73,8 @@ public class RichTooltip implements IRichTextBuilder<RichTooltip> {
         parent(Area.ZERO);
     }
 
-    public static void findIngredientArea(Area area, int x, int y) {
-        Screen screen = MCHelper.getCurrentScreen();
-        if (screen instanceof AbstractContainerScreen<?> containerScreen) {
-            Slot slot = containerScreen.getSlotUnderMouse();
-            if (slot != null) {
-                int sx = slot.x + containerScreen.getGuiLeft();
-                int sy = slot.y + containerScreen.getGuiTop();
-                if (sx >= 0 && sy >= 0) {
-                    area.set(sx - 1, sy - 1, 18, 18);
-                    return;
-                }
-            }
-        }
-        /*
-         * TODO fix this JEI compat thing
-         * if (ModularUI.Mods.isJEILoaded()) {
-         * IShowsRecipeFocuses overlay = (IShowsRecipeFocuses)
-         * ModularUIJeiPlugin.getRuntime().getIngredientListOverlay();
-         * IClickedIngredient<?> ingredient = overlay.getIngredientUnderMouse(x, y);
-         * if (ingredient == null || ingredient.getArea() == null) {
-         * overlay = (IShowsRecipeFocuses) ModularUIJeiPlugin.getRuntime().getBookmarkOverlay();
-         * ingredient = overlay.getIngredientUnderMouse(x, y);
-         * }
-         * if (ingredient != null && ingredient.getArea() != null) {
-         * Rectangle slot = ingredient.getArea();
-         * area.set(slot.x - 1, slot.y - 1, 18, 18);
-         * return;
-         * }
-         * }
-         */
-        area.set(Area.ZERO);
-    }
-
-    public void reset() {
+    @Override
+    public RichTooltip reset() {
         clearText();
         this.pos = null;
         this.tooltipBuilder = null;
@@ -117,6 +85,7 @@ public class RichTooltip implements IRichTextBuilder<RichTooltip> {
         this.x = 0;
         this.y = 0;
         this.maxWidth = Integer.MAX_VALUE;
+        return this;
     }
 
     @Tolerate
@@ -241,7 +210,7 @@ public class RichTooltip implements IRichTextBuilder<RichTooltip> {
 
         Pos pos = this.pos;
         if (pos == null) {
-            pos = ModularUIConfig.getTooltipPos();
+            pos = ModularUIConfig.tooltipPos();
         }
         if (pos == Pos.FIXED) {
             return new Rectangle(this.x, this.y, width, height);
@@ -393,7 +362,7 @@ public class RichTooltip implements IRichTextBuilder<RichTooltip> {
 
     public RichTooltip tooltipBuilder(Consumer<RichTooltip> tooltipBuilder) {
         Consumer<RichTooltip> existingBuilder = this.tooltipBuilder;
-        if (existingBuilder != null) {
+        if (existingBuilder != null && tooltipBuilder != null) {
             this.tooltipBuilder = tooltip -> {
                 existingBuilder.accept(this);
                 tooltipBuilder.accept(this);
@@ -407,7 +376,7 @@ public class RichTooltip implements IRichTextBuilder<RichTooltip> {
 
     public RichTooltip addFromItem(ItemStack item) {
         List<Component> lines = MCHelper.getItemToolTip(item);
-        add(lines.get(0));
+        add(lines.getFirst());
         if (lines.size() > 1) {
             spaceLine();
             for (int i = 1, n = lines.size(); i < n; i++) {
@@ -425,6 +394,39 @@ public class RichTooltip implements IRichTextBuilder<RichTooltip> {
         this.titleMargin = margin;
         this.appliedMargin = false;
         return this;
+    }
+
+    public static void findIngredientArea(Area area, int x, int y) {
+        Screen screen = MCHelper.getCurrentScreen();
+        if (screen instanceof AbstractContainerScreen<?> containerScreen) {
+            Slot slot = containerScreen.getSlotUnderMouse();
+            if (slot != null) {
+                int sx = slot.x + containerScreen.getGuiLeft();
+                int sy = slot.y + containerScreen.getGuiTop();
+                if (sx >= 0 && sy >= 0) {
+                    area.set(sx - 1, sy - 1, 18, 18);
+                    return;
+                }
+            }
+        }
+        /*
+         * TODO fix this JEI compat thing
+         * if (ModularUI.Mods.isJEILoaded()) {
+         * IShowsRecipeFocuses overlay = (IShowsRecipeFocuses)
+         * ModularUIJeiPlugin.getRuntime().getIngredientListOverlay();
+         * IClickedIngredient<?> ingredient = overlay.getIngredientUnderMouse(x, y);
+         * if (ingredient == null || ingredient.getArea() == null) {
+         * overlay = (IShowsRecipeFocuses) ModularUIJeiPlugin.getRuntime().getBookmarkOverlay();
+         * ingredient = overlay.getIngredientUnderMouse(x, y);
+         * }
+         * if (ingredient != null && ingredient.getArea() != null) {
+         * Rectangle slot = ingredient.getArea();
+         * area.set(slot.x - 1, slot.y - 1, 18, 18);
+         * return;
+         * }
+         * }
+         */
+        area.set(Area.ZERO);
     }
 
     public enum Pos {
