@@ -1,27 +1,28 @@
 package brachy.modularui.utils;
 
+import brachy.modularui.api.layout.IViewportStack;
 import brachy.modularui.api.widget.IWidget;
 import brachy.modularui.screen.viewport.LocatedWidget;
-import brachy.modularui.screen.viewport.TransformationMatrix;
 
-import it.unimi.dsi.fastutil.objects.ObjectList;
 import org.jetbrains.annotations.Nullable;
+
+import java.util.List;
 
 public class HoveredWidgetList {
 
-    private final ObjectList<LocatedWidget> delegate;
+    private final List<LocatedWidget> delegate;
 
-    public HoveredWidgetList(ObjectList<LocatedWidget> delegate) {
+    public HoveredWidgetList(List<LocatedWidget> delegate) {
         this.delegate = delegate;
     }
 
-    public void add(IWidget widget, TransformationMatrix viewports, Object additionalHoverInfo) {
-        this.delegate.add(0, new LocatedWidget(widget, viewports, additionalHoverInfo));
+    public void add(IWidget widget, IViewportStack viewports, Object additionalHoverInfo) {
+        this.delegate.addFirst(new LocatedWidget(widget, viewports.peek(), additionalHoverInfo));
     }
 
     @Nullable
     public IWidget peek() {
-        return isEmpty() ? null : this.delegate.get(0).getElement();
+        return isEmpty() ? null : this.delegate.getFirst().getElement();
     }
 
     public boolean isEmpty() {
